--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-redux-loading-bar": "^2.9.2",
     "react-router-dom": "^4.1.1",
     "react-router-scroll": "ytase/react-router-scroll#build",
+    "react-share": "^1.16.0",
     "react-simple-dropdown": "^3.0.0",
     "react-swipeable-views": "^0.12.3",
     "react-textarea-autosize": "^5.0.7",
